#451 create containers for the newly uploaded profiles and ensure the generated pom has a profile defined